fixing parameters
